--- a/pages/signup.html
+++ b/pages/signup.html
@@ -15,11 +15,13 @@
             <a href="../index.html">DISCOVER</a>
         </div>
         <div class="logo" onclick="window.location.href='../index.html'">
-            <div class="moon-icon">☾</div>
             <span>VIBE COLLAB</span>
         </div>
-        <div class="nav-right desktop-only">
-            <a href="login.html">LOGIN</a>
+        <div class="nav-right desktop-only" style="display:flex; align-items:center;">
+            <div class="moon-icon">☀</div>
+            <div id="auth-links">
+                <a href="login.html">LOGIN</a>
+            </div>
         </div>
     </nav>
 
