--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 
 <body>
 
-    <!-- Top Announcement Bar -->
-    <div class="top-bar">
-        <span>COLLABORATE WORLDWIDE | FIND YOUR PERFECT MATCH TODAY</span>
-    </div>
+
 
     <!-- Navigation -->
     <nav>
@@ -41,8 +38,36 @@
         <div class="mobile-menu-icon mobile-only">☰</div>
     </nav>
 
-    <!-- Split Hero Section -->
-
+    <!-- Featured Creators Carousel -->
+    <div class="hero-carousel" id="hero-carousel">
+        <!-- Slide 1 -->
+        <div class="carousel-slide active" onclick="window.location.href='pages/profile.html?id=m2'">
+            <img src="https://images.unsplash.com/photo-1598488035139-bdbb2231ce04?q=80&w=1600&auto=format&fit=crop"
+                alt="Featured 1">
+            <div class="carousel-content">
+                <h2>FEATURED:<br>LUNA ECHO</h2>
+                <p>Pushing the boundaries of ambient soundscapes.</p>
+            </div>
+        </div>
+        <!-- Slide 2 -->
+        <div class="carousel-slide" onclick="window.location.href='pages/profile.html?id=m1'">
+            <img src="https://images.unsplash.com/photo-1511671782779-c97d3d27a1d4?q=80&w=1600&auto=format&fit=crop"
+                alt="Featured 2">
+            <div class="carousel-content">
+                <h2>SPOTLIGHT:<br>NEON WAVE</h2>
+                <p>Synth-pop sensations taking over the underground scene.</p>
+            </div>
+        </div>
+        <!-- Slide 3 -->
+        <div class="carousel-slide" onclick="window.location.href='pages/profile.html?id=m3'">
+            <img src="https://images.unsplash.com/photo-1493225255756-d9584f8606e9?q=80&w=1600&auto=format&fit=crop"
+                alt="Featured 3">
+            <div class="carousel-content">
+                <h2>RISING STAR:<br>VOID WALKER</h2>
+                <p>Mastering the art of silence and noise.</p>
+            </div>
+        </div>
+    </div>
 
     <!-- Main Content Area -->
     <div class="container">
