--- a/index.html
+++ b/index.html
@@ -14,26 +14,14 @@
 
     <!-- Navigation -->
     <nav>
-        <div class="nav-left desktop-only">
-            <a href="index.html">DISCOVER</a>
-            <a href="#">ARTISTS</a>
-            <a href="#">PRODUCERS</a>
-        </div>
-        <div class="logo" onclick="window.location.href='index.html'">
+        <div class="logo" onclick="window.location.href='index.html'" style="margin-left:0;">
             <!-- Logo Icon removed from here -->
             <span>VIBE COLLAB</span>
         </div>
-        <div class="nav-right desktop-only" style="display:flex; align-items:center;">
-            <!-- Theme Toggle First -->
-            <div class="moon-icon">☀</div>
 
-            <!-- Auth Links Container -->
-            <div id="auth-links">
-                <!-- Injected by JS based on Auth ID -->
-                <a href="pages/signup.html" id="create-profile-link">JOIN US</a>
-                <a href="#">SEARCH</a>
-                <a href="pages/login.html">LOGIN</a>
-            </div>
+        <div class="nav-right" style="display:flex; align-items:center; gap:20px;">
+            <!-- JS will inject Profile Icon OR 'Create Account' here -->
+            <div id="auth-links"></div>
         </div>
         <div class="mobile-menu-icon mobile-only">☰</div>
     </nav>
