--- a/feed.html
+++ b/feed.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MARINE VIBES – Collaborative Network</title>
+    <title>Artist Feed | VIBE COLLAB</title>
+    <meta name="description"
+        content="Browse the latest artist profiles on Vibe Collab. Find producers, singers, and musicians looking for collaboration." />
     <link rel="stylesheet" href="css/style.css" />
 </head>
 
