--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MARINE VIBES – Collaborative Network</title>
+    <title>VIBE COLLAB | Connect, Collaborate, Create Music</title>
+    <meta name="description"
+        content="Join Vibe Collab, the ultimate network for artists, producers, and musicians to find collaborators. Discover talent, connect globally, and launch your music career." />
+    <meta name="keywords"
+        content="music collaboration, find musicians, artist network, producers, vocalists, band finder" />
     <link rel="stylesheet" href="css/style.css" />
 </head>
 
