--- a/pages/login.html
+++ b/pages/login.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LOGIN - VIBE COLLAB</title>
+    <title>Login | VIBE COLLAB</title>
+    <meta name="description" content="Login to your Vibe Collab account to start connecting with musicians." />
     <link rel="stylesheet" href="../css/style.css" />
 </head>
 
