--- a/pages/signup.html
+++ b/pages/signup.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JOIN VIBE COLLAB</title>
+    <title>Join Now | VIBE COLLAB</title>
+    <meta name="description"
+        content="Create your free Vibe Collab account today. The best place for artists to collaborate online." />
     <link rel="stylesheet" href="../css/style.css" />
 </head>
 
